Implemented method hillEffect()
Function to determine if going UPHILL // DOWNHILL // or FLATLAND.
Currently outputs into commandline.
Example: "Going Downhill"

Status is always checked.

Can be changed to adjust velocity of fire agent.

--- a/.gitignore
+++ b/.gitignore
@@ -335,3 +335,9 @@ xcuserdata/
 /*.gcno
 
 # End of https://www.gitignore.io/api/osx,xcode,windows
+
+bin/data/settings/calibration.xml
+bin/data/settings/calibration.xml
+bin/data/settings/kinectProjectorSettings.xml
+bin/data/settings/calibration.xml
+bin/data/settings/kinectProjectorSettings.xml
